tests/paczka1/small_fuzzy/66564045.err
Error in line 2: uBWbrWnzn A542 46,23
Error in line 1: uBWbrWnzn S465 96,1
Error in line 5: NEtI S465 9,5
Error in line 11: db9 A542 14,5
